csi/test-nfs-backup.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-backup-nfs-pod
spec:
  containers:
    - name: writer
      image: alpine
      command: ["/bin/sh", "-c"]
      args:
        - while true; do
          echo "$(date) - Hello from K8s - NFS!" >> /mnt/storage/test-file.txt;
          sleep 5;
          done
      volumeMounts:
        - name: storage
          mountPath: /mnt/storage
  volumes:
    - name: storage
      persistentVolumeClaim:
        claimName: test-backup-nfs-pvc
