csi/test-nfs-restore.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-restore-check-nfs
spec:
  containers:
    - name: checker
      image: alpine
      command: ["/bin/sh", "-c"]
      args:
        - echo "Checking recovered data..."; 
          cat /data/test-file.txt; 
          sleep 3600
      volumeMounts:
        - name: restored-storage
          mountPath: /data
  volumes:
    - name: restored-storage
      persistentVolumeClaim:
        claimName: pvc-restore-nfs
